force-app/main/default/objects/Review1__c/Review1__c.object-meta.xml
<CustomObject>
    <description>Represents an interviewer&apos;s assessment of a particular candidate</description>
    <label>Review1</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Review1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>