force-app/main/default/objects/Review1__c/fields/Candidate1__c.field-meta.xml
<CustomField>
    <fullName>Candidate1__c</fullName>
    <formula>HYPERLINK( Job_Application1__r.Candidate1__r.Id ,  Job_Application1__r.Candidate1__r.First_Name__c   &amp;  &quot;&quot; &amp;   Job_Application1__r.Candidate1__r.Last_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate1</label>
    <type>Text</type>
</CustomField>