force-app/main/default/objects/Review1__c/fields/Job_Application1__c.field-meta.xml
<CustomField>
    <fullName>Job_Application1__c</fullName>
    <label>Job Application1</label>
    <referenceTo>Job_Application1__c</referenceTo>
    <relationshipLabel>Reviews1</relationshipLabel>
    <relationshipName>Reviews1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>