force-app/main/default/objects/Review1__c/fields/Position1__c.field-meta.xml
<CustomField>
    <fullName>Position1__c</fullName>
    <formula>Job_Application1__r.Position1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position1</label>
    <type>Text</type>
</CustomField>